--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-For Advent of Code 2021
+For [Advent of Code 2021](https://adventofcode.com/)
 
 .env:
 SESSION_TOKEN="Hex string that's your logged-in session token. Get it from your browser inspector or cookie jar."
